--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "jose": "^6.1.3",
+    "lucide-react": "^0.561.0",
     "next": "16.0.8",
     "react": "19.2.1",
     "react-dom": "19.2.1",
