--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
+    "fast-xml-parser": "^5.3.3",
     "jose": "^6.1.3",
     "lucide-react": "^0.561.0",
     "next": "16.0.8",
