--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
   },
   "dependencies": {
     "@prisma/client": "^6.19.1",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-select": "^2.2.6",
+    "@xmldom/xmldom": "^0.8.11",
     "bcryptjs": "^3.0.3",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "domparser": "^0.1.1",
     "dotenv": "^17.2.3",
     "fast-xml-parser": "^5.3.3",
     "jose": "^6.1.3",
@@ -36,6 +41,7 @@
     "prisma": "6",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
 }
