--- a/package.json
+++ b/package.json
@@ -13,20 +13,28 @@
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-select": "^2.2.6",
     "@xmldom/xmldom": "^0.8.11",
+    "add": "^2.0.6",
     "bcryptjs": "^3.0.3",
+    "button": "^1.1.1",
+    "card": "^2.5.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "domparser": "^0.1.1",
     "dotenv": "^17.2.3",
     "fast-xml-parser": "^5.3.3",
+    "input": "^1.0.1",
     "jose": "^6.1.3",
+    "label": "^0.2.2",
     "lucide-react": "^0.561.0",
     "next": "16.0.8",
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "recharts": "^3.5.1",
+    "separator": "^0.1.0",
+    "shadcn": "^3.6.1",
     "tailwind-merge": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^4.1.13"
   },
   "devDependencies": {
