--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-accounting-app",
-  "version": "13.6.15",
+  "version": "13.7.17",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -13,10 +13,12 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-select": "^2.2.6",
+    "@types/canvas-confetti": "^1.9.0",
     "@xmldom/xmldom": "^0.8.11",
     "add": "^2.0.6",
     "bcryptjs": "^3.0.3",
     "button": "^1.1.1",
+    "canvas-confetti": "^1.9.4",
     "card": "^2.5.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
