--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "label": "^0.2.2",
     "lucide-react": "^0.561.0",
     "next": "16.0.8",
+    "next-auth": "^4.24.13",
     "number-to-words": "^1.2.4",
     "react": "19.2.1",
     "react-dom": "19.2.1",
